Fix compose page's CSS so fields are wide and stretch properly.

--- a/maalstroom/resources/style.css
+++ b/maalstroom/resources/style.css
@@ -689,7 +689,7 @@ a.normal:visited, a.normal:link {
     border: 1px dashed;
 }
 .from-address {
-    width: 80%;
+    width: calc(100% - 10em);
     overflow: hidden;
     text-overflow: ellipsis;  // IE 6+, FF 7+, Op 11+, Saf 1.3+, Chr 1+
     -o-text-overflow: ellipsis;  // for Opera 9 & 10
@@ -709,8 +709,8 @@ a.normal:visited, a.normal:link {
 }
 .message input {
     height:2em;
-    width: 70%;
-    min-width: 20em;
+    width: calc(100% - 12em);
+    min-width: 10em;
 }
 .message textarea {
     padding:8px;
